crates/nyx-lexer/tests/snapshots/integration_tests__expressions__parenthesized.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: paren_ops
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- I32
- Comma
- Ident: c
- Colon
- I32
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: a
- Eq
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Plus
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- RParen
- Star
- IntegerLiteral:
    base: Decimal
    digits: "3"
    suffix: ~
- Newline
- Let
- Ident: b
- Eq
- LParen
- Ident: a
- Plus
- Ident: b
- RParen
- Star
- LParen
- Ident: a
- Minus
- Ident: b
- RParen
- Newline
- Let
- Ident: c
- Eq
- LParen
- LParen
- Ident: a
- Plus
- Ident: b
- RParen
- Star
- Ident: c
- RParen
- Minus
- IntegerLiteral:
    base: Decimal
    digits: "1"
    suffix: ~
- Newline
- Pass
- Newline
- Dedent
