crates/nyx-lexer/tests/snapshots/integration_tests__expressions__self_expr.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Struct
- Ident: Node
- Newline
- Indent
- Ident: value
- Colon
- I32
- Newline
- Ident: next
- Colon
- Question
- Star
- Ident: Node
- Newline
- Dedent
- Func
- Ident: Node
- Colon
- Colon
- Ident: has_next
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: next
- Ne
- "Null"
- Newline
- Dedent
- Func
- Ident: Node
- Colon
- Colon
- Ident: get_value
- LParen
- Star
- SelfLower
- RParen
- Arrow
- I32
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: value
- Newline
- Dedent
