crates/nyx-lexer/tests/snapshots/integration_tests__expressions__type_access.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: type_access_exprs
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: x
- Eq
- Ident: Foo
- Colon
- Colon
- Ident: BAR
- Newline
- Let
- Ident: y
- Eq
- Std
- Colon
- Colon
- Ident: io
- Colon
- Colon
- Ident: STDIN
- Newline
- Let
- Ident: z
- Eq
- Ident: Color
- Colon
- Colon
- Ident: RED
- Newline
- Pass
- Newline
- Dedent
