crates/nyx-lexer/tests/snapshots/integration_tests__expressions__unary.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: unary_ops
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- Bool
- Comma
- Ident: p
- Colon
- Star
- I32
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: neg
- Eq
- Minus
- Ident: a
- Newline
- Let
- Ident: pos
- Eq
- Plus
- Ident: a
- Newline
- Let
- Ident: bne
- Eq
- Tilde
- Ident: a
- Newline
- Let
- Ident: not
- Eq
- Bang
- Ident: b
- Newline
- Let
- Ident: deref
- Eq
- Star
- Ident: p
- Newline
- Let
- Ident: addr
- Eq
- And
- Ident: a
- Newline
- Pass
- Newline
- Dedent
